--- a/vault-configmap.yaml
+++ b/vault-configmap.yaml
@@ -1,8 +1,56 @@
 ---
-apiVersion: v1
-kind: ServiceAccount
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#   name: app-example
+
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: app-example
+  name: app-example-deployment1
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app-example1
+  template:
+    metadata:
+      labels:
+        app: app-example1
+      annotations:
+        vault.hashicorp.com/agent-inject: 'true'
+        # vault.hashicorp.com/secret-volume-path: '/tmp/vault'
+        vault.hashicorp.com/agent-copy-volume-mounts: 'app'
+        vault.hashicorp.com/agent-inject-secret-db-creds: secret/data/database/creds/db-app
+        vault.hashicorp.com/log-level: trace
+        vault.hashicorp.com/agent-inject-template-db-creds: |
+          {{- with secret "secret/data/database/creds/db-app" -}}
+          postgres://{{ .Data.data.username }}:{{ .Data.data.password }}@postgres:5432/appdb?sslmode=disable
+          {{- end }}
+        # vault.hashicorp.com/agent-inject-command-tooling: |
+        # vault.hashicorp.com/tls-secret: 'vault-tls-client'
+        vault.hashicorp.com/role: 'webapp'
+        vault.hashicorp.com/auth-path: 'auth/aks-auth'
+    spec:
+      containers:
+        - name: app
+          image: 'nginx:latest'
+          ports:
+            - containerPort: 80
+          volumeMounts:
+            - mountPath: /usr/share/nginx/html
+              name: shared-secrets
+            - mountPath: /tmp/vault
+              name: vault-sink
+
+      serviceAccountName: default
+      volumes:
+      - emptyDir:
+          medium: Memory
+        name: shared-secrets
+      - emptyDir:
+          medium: Memory
+        name: vault-sink
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -22,6 +70,13 @@ spec:
         vault.hashicorp.com/agent-configmap: 'my-configmap'
         # vault.hashicorp.com/secret-volume-path: '/tmp/vault'
         vault.hashicorp.com/agent-copy-volume-mounts: 'app'
+        vault.hashicorp.com/agent-inject-secret-db-creds: secret/data/database/creds/db-app
+        vault.hashicorp.com/log-level: trace
+        vault.hashicorp.com/agent-inject-template-db-creds: |
+          {{- with secret "database/creds/db-app" -}}
+          postgres://{{ .Data.data.username }}:{{ .Data.data.password }}@postgres:5432/appdb?sslmode=disable
+          {{- end }}
+        # vault.hashicorp.com/agent-inject-command-tooling: |
         # vault.hashicorp.com/tls-secret: 'vault-tls-client'
     spec:
       containers:
@@ -32,18 +87,17 @@ spec:
           volumeMounts:
             - mountPath: /usr/share/nginx/html
               name: shared-secrets
+            - mountPath: /tmp/vault
+              name: vault-sink
 
       serviceAccountName: default
       volumes:
       - emptyDir:
           medium: Memory
         name: shared-secrets
-      # - emptyDir:
-      #     medium: Memory
-      #   name: vault-sink
-      # - emptyDir:
-      #     medium: Memory
-      #   name: home-sidecar
+      - emptyDir:
+          medium: Memory
+        name: vault-sink
 
 ---
 apiVersion: v1
@@ -57,12 +111,13 @@ data:
         "config" = {
           "role" = "webapp"
         }
+        "mount_path" = "auth/aks-auth"
         "type" = "kubernetes"
       }
 
       "sink" = {
         "config" = {
-          "path" = "/home/vault/.token"
+          "path" = "/tmp/vault/sink"
         }
 
         "type" = "file"
@@ -72,26 +127,30 @@ data:
     "exit_after_auth" = false
     "pid_file" = "/home/vault/.pid"
 
-    "template" = {
-      "contents" = "{{- with secret \"secret/database/creds/db-app\" -}}postgres://{{ .Data.data.username }}:{{ .Data.data.password }}@postgres:5432/mydb?sslmode=disable{{- end }}"
-      "destination" = "/vault/secrets/db-creds"
+    # "template" = {
+    #   "contents" = "{{- with secret \"secret/database/creds/db-app\" -}}{{ range $k, $v := .Data.data }} export {{ $k }}="{{ $v }}" {{- end }}"
+    #   "destination" = "/vault/secrets/db-creds"
+    # }
+
+    # "vault" = {
+    #   "address" = "http://vault.vault.svc.cluster.local:8200"
+    # }
+    "vault" = {
+      "address" = "http://52.185.214.2:8200"
     }
 
-    "vault" = {
-      "address" = "http://vault.vault.svc.cluster.local:8200"
-    }
   config-init.hcl: |
     "auto_auth" = {
       "method" = {
         "config" = {
           "role" = "webapp"
         }
+        mount_path = "auth/aks-auth"
         "type" = "kubernetes"
       }
-
       "sink" = {
         "config" = {
-          "path" = "/home/vault/.token"
+          "path" = "/tmp/vault/sink"
         }
 
         "type" = "file"
@@ -102,10 +161,22 @@ data:
     "pid_file" = "/home/vault/.pid"
 
     "template" = {
-      "contents" = "{{- with secret \"secret/database/creds/db-app\" -}}postgres://{{ .Data.data.username }}:{{ .Data.data.password }}@postgres:5432/mydb?sslmode=disable{{- end }}"
+      #"contents" = "{{- with secret \"secret/data/database/creds/db-app\" -}}{{ range $k, $v := .Data.data }}export {{ $k }}={{ $v }}{{ end }}{{- end }}"
+
+      contents = <<EOT
+        {{- with secret "secret/data/database/creds/db-app" -}}
+          {{ range $k, $v := .Data.data }}
+            export {{ $k }}={{ $v }}
+          {{ end }}
+        {{- end }}
+      EOT
+
       "destination" = "/vault/secrets/db-creds"
     }
 
+    # "vault" = {
+    #   "address" = "http://vault.vault.svc.cluster.local:8200"
+    # }
     "vault" = {
-      "address" = "http://vault.vault.svc.cluster.local:8200"
+      "address" = "http://52.185.214.2:8200"
     }
